# QuantumHomomorphicEncryption

./: README.md  mkdocs.yaml  pyproject.toml
docs/: index.md
docs/api/: all-api.md
python/qhe/: Dual.py  DualHE.py  __init__.py
python/qhe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_Dual.py  test_DualHE.py
